Rapidapi: Added ApiOperation id (#11)
* added health route for rapidapi - remove api prefix

* change port config

* fix header forced api key

* added apioperation decorator
