# backend/src/ask-assistant/ask-assistant.controller.ts
@@ -4,7 +4,7 @@ import {
   AskAssistantRequestDto,
   AskAssistantResponse,
 } from './ask-assistant.dto';
-import { ApiTags } from '@nestjs/swagger';
+import { ApiOperation, ApiTags } from '@nestjs/swagger';
 
 @ApiTags('MonAmiChef')
 @Controller('ask-assistant')
@@ -12,6 +12,7 @@ export class AskAssistantController {
   constructor(private askAssistantService: AskAssistantService) {}
 
   @Post()
+  @ApiOperation({ operationId: 'ask-assistant' })
   async askAssistant(
     @Body() body: AskAssistantRequestDto,
   ): Promise<AskAssistantResponse> {
